--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,30 @@
 [build]
-  command = "npm run build"
+  command = "cd frontend && npm run build"
   publish = "frontend/dist"
   functions = "netlify/functions"
 
 [dev]
-  command = "echo 'Functions only mode'"
-  port = 8888
   framework = "#custom"
+  command = "cd frontend && npm run dev"
+  targetPort = 5173
+  port = 3000
+  publish = "frontend/dist"
 
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
